--- a/employee-management-system/src/main/resources/application.properties
+++ b/employee-management-system/src/main/resources/application.properties
@@ -1,7 +1,14 @@
 spring.application.name=employee-management-system
 
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_management
+spring.datasource.url=jdbc:mysql://localhost:3306/employees
 spring.datasource.username=root
 spring.datasource.password=hezron
 
+
+
+# debug
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
