--- a/employee-management-system/src/main/resources/application.properties
+++ b/employee-management-system/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/employees
 spring.datasource.username=root
 spring.datasource.password=hezron
 
+server.port=8000
 
 
 # debug
